# cuecard_indexer

./: .env  .gitignore  Cargo.toml  README.md
resources/test/: testdb.sqlite
resources/test/should_index/: .de.sopicki.cuelib.testfile.md  testfile.md
resources/test/should_not_modify/: .de.sopicki.cuelib.test_update_file.md  test_update_file.md
resources/test/should_update/: test_update_file.md
scripts/: release.sh
src/: cli.yml  lib.rs  main.rs
