[package]
name = "cuecard_indexer"
version = "0.2.0"
authors = ["Alexander Sopicki <asopicki@gmail.com>"]

[dependencies]
diesel = { version = "1.1.0", features = ["sqlite"] }
dotenv = "^0.9.0"
walkdir = "^2.0.1"
regex = "^0.2.5"
lazy_static = "^1.0.0"
serde_json = "^1.0.9"
uuid = { version = "^0.5", features = ["v4"] }
log = "^0.4.1"
env_logger = "^0.4.3"
cuer_database = { version = "0.2.0", path="../cuer_database" }

[dependencies.clap]
features = ["yaml"]
version = "^2.31.1"