[package]
name = "cuecard_indexer"
version = "0.2.0"
authors = ["Alexander Sopicki <asopicki@gmail.com>"]

[dependencies]
diesel = { version = "1.1", features = ["sqlite"] }
dotenv = "^0.9"
walkdir = "^2.0"
regex = "^0.2"
lazy_static = "^1.0"
serde_json = "^1.0"
uuid = { version = "^0.5", features = ["v4"] }
log = "^0.4"
env_logger = "^0.4"
cuer_database = { version = "^0.3", git="https://github.com/asopicki/cuer_database.git" }
#cuer_database = { version = "^0.3", path="../cuer_database" }

[dependencies.clap]
features = ["yaml"]
version = "^2.31.1"
