[package]
name = "cuecard_indexer"
version = "0.3.3"
authors = ["Alexander Sopicki <asopicki@gmail.com>"]
edition = "2018"
cargo-features = ["edition"]

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
walkdir = "^2.2"
regex = "1"
lazy_static = "^1.4"
serde_json = "^1.0"
uuid = { version = "^0.7", features = ["v4"] }
filetime = "^0.2"
log = "^0.4"
env_logger = "0.7"
cuer_database = { version = "^0.6.2", git="https://github.com/asopicki/cuer_database.git" }
#cuer_database = { version = "^0.5", path="../cuer_database" }

[dependencies.clap]
features = ["yaml"]
version = "^2.31.1"
